--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,17 @@
 @import "tailwindcss";
+
+
+
+@custom-variant dark (&:where(.dark, .dark *));
+
+:root{
+    --dark_mode_elements: hsl(209, 23%, 22%);
+    --dark_mode_background: hsl(207, 26%, 17%);
+    --light_mode_text: hsl(200, 15%, 8%);
+    --light_mode_input: hsl(0, 0%, 52%);
+    --light_mode_background: hsl(0, 0%, 98%);
+    --dark_mode_text: hsl(0, 0%, 100%); 
+    --light_mode_elements: hsl(0, 0%, 100%);
+}
+
+
